--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -30,7 +30,7 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
-
+		<sonar.host.url>http://host.docker.internal:9000</sonar.host.url>
 
 		<sonar.projectKey>com.developer:journal</sonar.projectKey>
 		<sonar.projectName>Journal</sonar.projectName>
