--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -56,7 +56,7 @@ pipeline {
             steps {
                 withSonarQubeEnv('sq1') {
                     dir('backend') {
-                        sh './mvnw sonar:sonar -Dsonar.host.url=${SONAR_HOST_URL}'
+                        sh './mvnw sonar:sonar -Dsonar.host.url=http://sonarqube:9000'
                     }
                 }
             }
