--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -41,6 +41,8 @@
 		<sonar.language>java</sonar.language>
 		<sonar.java.binaries>target/classes</sonar.java.binaries>
 		<sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+		<sonar.host.url>http://host.docker.internal:9000</sonar.host.url>
+
 
 	</properties>
 	<dependencies>
